incluyendo la pagina de creditos

--- a/css/styles.css
+++ b/css/styles.css
@@ -1285,6 +1285,14 @@ http://www.tipue.com/search
   border-radius: 10px;
 }
 
+.border-radius-top-left-0 {
+  border-top-left-radius: 0;
+}
+
+.border-radius-top-right-0 {
+  border-top-right-radius: 0;
+}
+
 .h-2 {
   height: 2rem;
 }
