--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -26,4 +26,7 @@
     --celery: #A5CC5F;
     --luckyPointer: #221E61;
     --floralwhite: #fffaf0;
+    --fluor: #c5ecac;
+    --acapulco: #b1dccc;
+    --gondola: #542436;
 }
