--- a/src/css/_border.css
+++ b/src/css/_border.css
@@ -26,6 +26,10 @@
   border-color: var(--black);
 }
 
+.borderc-gondola {
+  border-color: var(--gondola);
+}
+
 .borderc-greyc {
   border-color: var(--greyc);
 }
