cambios de stilos

--- a/css/styles.css
+++ b/css/styles.css
@@ -913,6 +913,10 @@ http://www.tipue.com/search
   background-color: #fffaf0;
 }
 
+.bgc-floralwhite-9 {
+  background-color: rgba(255, 250, 240,.9);
+}
+
 .bgc-fluor {
   background-color: #c5ecac;
 }
