--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -30,4 +30,7 @@
     --acapulco: #b1dccc;
     --gondola: #542436;
     --florawhite9: rgba(255, 250, 240,.9);
+    --white9: rgba(255, 255, 255,.9);
+    --periwinkie: #e7ecff;
+    --woodsmoke: #19160a;
 }
