--- a/src/css/_width.css
+++ b/src/css/_width.css
@@ -68,3 +68,164 @@
 .w-h-100px {
   width: 100px;
 }
+
+
+
+@media only screen and (min-width: 30em) {
+
+    .w-0-s {
+      width: 0;
+    }
+
+    .w-10-s {
+      width: 10%;
+    }
+
+    .w-20-s {
+      width: 20%;
+    }
+
+    .w-30-s {
+      width: 30%;
+    }
+
+    .w-40-s {
+      width: 40%;
+    }
+
+    .w-45-s {
+      width: 45%;
+    }
+
+    .w-50-s {
+      width: 50%;
+    }
+
+
+    .w-60-s {
+      width: 60%;
+    }
+
+    .w-70-s {
+      width: 70%;
+    }
+
+    .w-80-s {
+      width: 80%;
+    }
+
+    .w-90-s {
+      width: 90%;
+    }
+
+    .w-100-s {
+      width: 100%;
+    }
+
+}
+
+@media only screen and (min-width: 48em) {
+
+    .w-0-m {
+      width: 0;
+    }
+
+    .w-10-m {
+      width: 10%;
+    }
+
+    .w-20-m {
+      width: 20%;
+    }
+
+    .w-30-m {
+      width: 30%;
+    }
+
+    .w-40-m {
+      width: 40%;
+    }
+
+    .w-45-m {
+      width: 45%;
+    }
+
+    .w-50-m {
+      width: 50%;
+    }
+
+
+    .w-60-m {
+      width: 60%;
+    }
+
+    .w-70-m {
+      width: 70%;
+    }
+
+    .w-80-m {
+      width: 80%;
+    }
+
+    .w-90-m {
+      width: 90%;
+    }
+
+    .w-100-m {
+      width: 100%;
+    }
+
+}
+
+@media only screen and (min-width: 64em) {
+
+    .w-0-l {
+      width: 0;
+    }
+
+    .w-10-l {
+      width: 10%;
+    }
+
+    .w-20-l {
+      width: 20%;
+    }
+
+    .w-30-l {
+      width: 30%;
+    }
+
+    .w-40-l {
+      width: 40%;
+    }
+
+    .w-45-l {
+      width: 45%;
+    }
+
+    .w-50-l {
+      width: 50%;
+    }
+
+    .w-60-l {
+      width: 60%;
+    }
+
+    .w-70-l {
+      width: 70%;
+    }
+
+    .w-80-l {
+      width: 80%;
+    }
+
+    .w-90-l {
+      width: 90%;
+    }
+
+    .w-100-l {
+      width: 100%;
+    }
+
+
+}
