--- a/css/styles.css
+++ b/css/styles.css
@@ -893,6 +893,127 @@ http://www.tipue.com/search
   width: 100px;
 }
 
+@media only screen and (min-width: 30em) {
+    .w-0--s {
+      width: 0;
+    }
+    .w-10--s {
+      width: 10%;
+    }
+    .w-20--s {
+      width: 20%;
+    }
+    .w-30--s {
+      width: 30%;
+    }
+    .w-40--s {
+      width: 40%;
+    }
+    .w-45--s {
+      width: 45%;
+    }
+    .w-50--s {
+      width: 50%;
+    }
+    .w-60--s {
+      width: 60%;
+    }
+    .w-70--s {
+      width: 70%;
+    }
+    .w-80--s {
+      width: 80%;
+    }
+    .w-90--s {
+      width: 90%;
+    }
+    .w-100--s {
+      width: 100%;
+    }
+
+}
+
+@media only screen and (min-width: 48em) {
+    .w-0--m {
+      width: 0;
+    }
+    .w-10--m {
+      width: 10%;
+    }
+    .w-20--m {
+      width: 20%;
+    }
+    .w-30--m {
+      width: 30%;
+    }
+    .w-40--m {
+      width: 40%;
+    }
+    .w-45--m {
+      width: 45%;
+    }
+    .w-50--m {
+      width: 50%;
+    }
+    .w-60--m {
+      width: 60%;
+    }
+    .w-70--m {
+      width: 70%;
+    }
+    .w-80--m {
+      width: 80%;
+    }
+    .w-90--m {
+      width: 90%;
+    }
+    .w-100--m {
+      width: 100%;
+    }
+
+}
+
+@media only screen and (min-width: 64em) {
+    .w-0--l {
+      width: 0;
+    }
+    .w-10--l {
+      width: 10%;
+    }
+    .w-20--l {
+      width: 20%;
+    }
+    .w-30--l {
+      width: 30%;
+    }
+    .w-40--l {
+      width: 40%;
+    }
+    .w-45--l {
+      width: 45%;
+    }
+    .w-50--l {
+      width: 50%;
+    }
+    .w-60--l {
+      width: 60%;
+    }
+    .w-70--l {
+      width: 70%;
+    }
+    .w-80--l {
+      width: 80%;
+    }
+    .w-90--l {
+      width: 90%;
+    }
+    .w-100--l {
+      width: 100%;
+    }
+
+
+}
+
 .black {
   color: #121;
 }
@@ -1029,8 +1150,82 @@ http://www.tipue.com/search
   display: none;
 }
 
+.display-t {
+  display: table;
+}
+
+.display-tbc {
+  display: table-cell;
+}
+
+@media only screen and (min-width: 30em) {
+  .display-ib--s {
+    display: inline-block;
+  }
+  .display-b--s {
+    display: block;
+  }
+  .display-n--s {
+    display: none;
+  }
+  .display-t--s {
+    display: table;
+  }
+  .display-tbc--s {
+    display: table-cell;
+  }
+
+}
+
+@media only screen and (min-width: 48em) {
+  .display-ib--m {
+    display: inline-block;
+  }
+  .display-b--m {
+    display: block;
+  }
+  .display-n--m {
+    display: none;
+  }
+  .display-t--m {
+    display: table;
+  }
+  .display-tbc--m {
+    display: table-cell;
+  }
+
+}
+
+@media only screen and (min-width: 64em) {
+  .display-ib--l {
+    display: inline-block;
+  }
+  .display-b--l {
+    display: block;
+  }
+  .display-n--l {
+    display: none;
+  }
+  .display-t--l {
+    display: table;
+  }
+  .display-tbc--l {
+    display: table-cell;
+  }
+
+
+}
+
 .font-0 {
   font-size: 0;
+}
+
+.font-05 {
+  font-size: .5rem;
+}
+
+.font-08 {
+  font-size: .88rem;
 }
 
 .font-1 {
@@ -1125,6 +1320,10 @@ http://www.tipue.com/search
   vertical-align: middle;
 }
 
+.vertical-b {
+  vertical-align: bottom;
+}
+
 .vertical-at {
   vertical-align: top;
 }
@@ -1167,6 +1366,14 @@ http://www.tipue.com/search
 
 .padding-1-2 {
   padding: 1rem 2rem;
+}
+
+.padding-0-2 {
+  padding: 0 2rem;
+}
+
+.padding-0-1 {
+  padding: 0 1rem;
 }
 
 .padding-0-5 {
