--- a/src/css/_width.css
+++ b/src/css/_width.css
@@ -73,52 +73,52 @@
 
 @media only screen and (min-width: 30em) {
 
-    .w-0-s {
+    .w-0--s {
       width: 0;
     }
 
-    .w-10-s {
+    .w-10--s {
       width: 10%;
     }
 
-    .w-20-s {
+    .w-20--s {
       width: 20%;
     }
 
-    .w-30-s {
+    .w-30--s {
       width: 30%;
     }
 
-    .w-40-s {
+    .w-40--s {
       width: 40%;
     }
 
-    .w-45-s {
+    .w-45--s {
       width: 45%;
     }
 
-    .w-50-s {
+    .w-50--s {
       width: 50%;
     }
 
 
-    .w-60-s {
+    .w-60--s {
       width: 60%;
     }
 
-    .w-70-s {
+    .w-70--s {
       width: 70%;
     }
 
-    .w-80-s {
+    .w-80--s {
       width: 80%;
     }
 
-    .w-90-s {
+    .w-90--s {
       width: 90%;
     }
 
-    .w-100-s {
+    .w-100--s {
       width: 100%;
     }
 
@@ -126,52 +126,52 @@
 
 @media only screen and (min-width: 48em) {
 
-    .w-0-m {
+    .w-0--m {
       width: 0;
     }
 
-    .w-10-m {
+    .w-10--m {
       width: 10%;
     }
 
-    .w-20-m {
+    .w-20--m {
       width: 20%;
     }
 
-    .w-30-m {
+    .w-30--m {
       width: 30%;
     }
 
-    .w-40-m {
+    .w-40--m {
       width: 40%;
     }
 
-    .w-45-m {
+    .w-45--m {
       width: 45%;
     }
 
-    .w-50-m {
+    .w-50--m {
       width: 50%;
     }
 
 
-    .w-60-m {
+    .w-60--m {
       width: 60%;
     }
 
-    .w-70-m {
+    .w-70--m {
       width: 70%;
     }
 
-    .w-80-m {
+    .w-80--m {
       width: 80%;
     }
 
-    .w-90-m {
+    .w-90--m {
       width: 90%;
     }
 
-    .w-100-m {
+    .w-100--m {
       width: 100%;
     }
 
@@ -179,51 +179,51 @@
 
 @media only screen and (min-width: 64em) {
 
-    .w-0-l {
+    .w-0--l {
       width: 0;
     }
 
-    .w-10-l {
+    .w-10--l {
       width: 10%;
     }
 
-    .w-20-l {
+    .w-20--l {
       width: 20%;
     }
 
-    .w-30-l {
+    .w-30--l {
       width: 30%;
     }
 
-    .w-40-l {
+    .w-40--l {
       width: 40%;
     }
 
-    .w-45-l {
+    .w-45--l {
       width: 45%;
     }
 
-    .w-50-l {
+    .w-50--l {
       width: 50%;
     }
 
-    .w-60-l {
+    .w-60--l {
       width: 60%;
     }
 
-    .w-70-l {
+    .w-70--l {
       width: 70%;
     }
 
-    .w-80-l {
+    .w-80--l {
       width: 80%;
     }
 
-    .w-90-l {
+    .w-90--l {
       width: 90%;
     }
 
-    .w-100-l {
+    .w-100--l {
       width: 100%;
     }
 
