--- a/css/styles.css
+++ b/css/styles.css
@@ -2144,4 +2144,8 @@ http://www.tipue.com/search
   box-shadow: 0 2px 5px -3px rgba(0,0,0,.75);
 }
 
+.bxs-1 {
+  box-shadow: 0 1px 2px rgba(0,0,0,0.075)
+}
+
 /*# sourceMappingURL=styles.css.map */
