--- a/src/css/_border.css
+++ b/src/css/_border.css
@@ -134,3 +134,11 @@
 .border-radius-top-right-0 {
   border-top-right-radius: 0;
 }
+
+.border-radius-bottom-left-0 {
+  border-bottom-left-radius: 0;
+}
+
+.border-radius-bottom-right-0 {
+  border-bottom-right-radius: 0;
+}
