--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,6 +11,7 @@
 @import '_color';
 @import '_display';
 @import '_fonts';
+@import '_flexbox';
 @import '_margin';
 @import '_textalign';
 @import '_vertical-align';
