--- a/src/css/_height.css
+++ b/src/css/_height.css
@@ -18,13 +18,7 @@
   height: 24rem;
 }
 
-.h-200px {
-  height: 200px;
-}
 
-.h-400px {
-  height: 400px;
-}
 
 .mih-100 {
   min-height: 100vh;
@@ -70,6 +64,14 @@
 
   .mih-100--s {
     min-height: 100vh;
+  }
+
+  .h-200px--s {
+    height: 200px;
+  }
+
+  .h-400px--s {
+    height: 400px;
   }
 
   .mih-custom--s {
