cambiando la sans-serif de los textos por una serif | actualizando el footer

--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -4,11 +4,15 @@
 
 body {
   line-height: 1.5;
-  font-family: var(--fontSystem);
+  font-family: var(--serif);
 }
 
 .font-s {
   font-family: var(--fontSystem);
+}
+
+.font-serif {
+  font-family: var(--serif);
 }
 
 .cursor-p {
