--- a/css/styles.css
+++ b/css/styles.css
@@ -316,6 +316,25 @@ body {
   cursor: pointer;
 }
 
+.nav-grid {
+  display: grid;
+
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto;
+  justify-items: center;
+  align-items: center;
+}
+
+.nav-grid-first {
+    display: inline-grid;
+
+    justify-self: start;
+}
+
+.nav-grid-second {
+    justify-self: end;
+}
+
 .link {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
     font-weight: bold;
