--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -19,6 +19,23 @@ body {
   cursor: pointer;
 }
 
+.nav-grid {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto;
+  justify-items: center;
+  align-items: center;
+}
+
+.nav-grid-first {
+    display: inline-grid;
+    justify-self: start;
+}
+
+.nav-grid-second {
+    justify-self: end;
+}
+
 .link {
     color: var(--black);
     border-bottom: 3px solid var(--black);
