modificando el border para delimitar la caja del buscador

--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -5,7 +5,7 @@
     --resto: #968282;
     --rojo: #6593CD;
     --grey: #efefef;
-    --greyc: #efefef;
+    --greyc: #ccc;
     --cruise2: #def7f2;
     --heath: #430e16;
     --white: #fff;
