--- a/css/styles.css
+++ b/css/styles.css
@@ -297,6 +297,8 @@ button:-moz-focusring,
 
 * {
   box-sizing: border-box;
+
+  /*background-color: #f0ebe6;*/
 }
 
 body {
@@ -339,9 +341,12 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
     font-weight: bold;
 
+    display: inline-block;
+
     padding-bottom: 3px;
 
     text-decoration: none;
+    letter-spacing: 0.06rem;
 
     color: #121;
     border-bottom: 3px solid #121;
@@ -1293,6 +1298,10 @@ http://www.tipue.com/search
   font-size: 1.5rem;
 }
 
+.font-1__25 {
+  font-size: 1.25rem;
+}
+
 .font-2 {
   font-size: 2rem;
 }
@@ -1322,6 +1331,9 @@ http://www.tipue.com/search
   .font-1--s {
     font-size: 1rem;
   }
+  .font-1__25--s {
+    font-size: 1.25rem;
+  }
   .font-1-5--s {
     font-size: 1.5rem;
   }
@@ -1350,6 +1362,9 @@ http://www.tipue.com/search
   }
   .font-08--m {
     font-size: .88rem;
+  }
+  .font-1__25--m {
+    font-size: 1.25rem;
   }
   .font-1--m {
     font-size: 1rem;
