--- a/src/css/_fonts.css
+++ b/src/css/_fonts.css
@@ -18,6 +18,10 @@
   font-size: 1.5rem;
 }
 
+.font-1__25 {
+  font-size: 1.25rem;
+}
+
 .font-2 {
   font-size: 2rem;
 }
@@ -51,6 +55,10 @@
 
   .font-1--s {
     font-size: 1rem;
+  }
+
+  .font-1__25--s {
+    font-size: 1.25rem;
   }
 
   .font-1-5--s {
@@ -89,6 +97,10 @@
 
   .font-08--m {
     font-size: .88rem;
+  }
+
+  .font-1__25--m {
+    font-size: 1.25rem;
   }
 
   .font-1--m {
